<resources>
    <string name="app_name">智能监护</string>
    <string name="user_web">http://www.jiazi-it.com/</string>
    <string name="user_name">甲子智能</string>
    <string name="play">实时视频</string>
    <string name="local_video">本地视频</string>
    <string name="playback">远程录像</string>
    <string name="system_setting">系统设置</string>
    <string name="wifi_setting">Wifi设置</string>
    <string name="change_info">修改密码</string>
    <string name="alert_setting">报警设置</string>
    <string name="time_setting">设备时钟设置</string>
    <string name="sdcard_setting">SD卡设置</string>
    <string name="toast_service_success">初始化完成</string>
    <string name="title_activity_add_camera">AddCameraActivity</string>
    <string name="action_settings">Settings</string>
    <string name="add_camera">添加摄像头</string>
    <string name="confirm">确认</string>
    <string name="uid">设备ID</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="search_camera">局域网搜索</string>
    <string name="searching_tip">正在搜索，请稍候...</string>
    <string name="add_search_result">搜索结果</string>
    <string name="refresh">刷新</string>
    <string name="str_cancel">取消</string>
    <string name="add_search_no">没有搜索到,请重试...</string>
    <string name="input_camera_addr">请输入IP地址</string>
    <string name="input_camera_port">请输入端口</string>
    <string name="input_camera_user">请输入用户名</string>
    <string name="input_camera_id">请输入设备ID</string>
    <string name="pppp_status_unknown">未知状态</string>
    <string name="pppp_status_connecting">正在连接</string>
    <string name="pppp_status_online">在线</string>
    <string name="pppp_status_disconnect">断线</string>
    <string name="pppp_status_connect_failed">连接失败</string>
    <string name="pppp_status_pwd_error">密码错误</string>
    <string name="pppp_status_invalid_id">ID号无效</string>
    <string name="pppp_dev_type_unknown">未知类型</string>
    <string name="pppp_status_initialing">已连接, 正在初始化</string>
    <string name="device_not_on_line">摄像机不在线</string>
    <string name="pppp_mode">模式:</string>
    <string name="pppp_mode_p2p_normal">p2p连接</string>
    <string name="pppp_mode_p2p_relay">p2p转发</string>
    <string name="pppp_mode_unknown">未知</string>
    <string name="pppp_status_connect_timeout">连接超时</string>
    <string name="login_stuta_camer">摄像机状态</string>
    <string name="alerm_motion_alarm">移动侦测报警</string>
    <string name="alerm_gpio_alarm">IO联动报警</string>
    <string name="camera_exist">摄像头已存在</string>
    <string name="connect_fail">连接失败！！!</string>
    <string name="dev_name">设备备注</string>
    <string name="please_add_camera">请先添加摄像头</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="exit">退出</string>
    <string name="exit_alert">确认退出吗 ?</string>
    <string name="str_ok">确定</string>
    <string name="ptz_default_vedio_params">视频参数恢复默认值</string>
    <string name="ptz_control">点击设置,进行控制</string>
    <string name="main_show_back">再按一次，退出程序！</string>
    <string name="exit_show">   提示：</string>
    <string name="exit_play_show">确认退出播放?</string>
    <string name="eixt_show_toast">本地录像中，请先停止再退出！</string>
    <string name="ptz_takepic_save_fail">该设备没有SDCard,照片保存失败</string>
    <string name="right">向右</string>
    <string name="left">向左</string>
    <string name="up">向上</string>
    <string name="down">向下</string>
    <string name="ptz_takepic_ok">拍照成功</string>
    <string name="ptz_takepic_fail">拍照失败</string>
    <string name="ptz_takevideo_begin">开始录像</string>
    <string name="ptz_takevideo_end">录像结束</string>
    <string name="connecting">正在连接...</string>
    <string name="videoing">录像中...</string>
    <string name="preset_call">预置位调用</string>
    <string name="preset_set">预置位设置</string>
    <string name="vga">普清</string>
    <string name="qvga">高清</string>
    <string name="mobile">手机</string>
    <string name="min">最低</string>
    <string name="low">低</string>
    <string name="middle">中</string>
    <string name="high">高</string>
    <string name="max">最高</string>
    <string name="wifi_no_safe">无</string>
    <string name="connected">已连接</string>
    <string name="wifi_not_connected">未连接</string>
    <string name="wifi_set_success">WiFi设置成功,摄像机正在重启...</string>
    <string name="wifi_set_failed">WiFi设置失败</string>
    <string name="wifi_getparams">正在获取WiFi信息...</string>
    <string name="wifi_scanning">WiFi正在扫描,请稍候...</string>
    <string name="pwd_no_empty">密码不能为空</string>
    <string name="user_name_no_empty">用户名不能为空</string>
    <string name="wifi_scan_failed">WiFi扫描失败</string>
    <string name="wifi_notchange">WiFi没有更改,不需要设置</string>
    <string name="back">返回</string>
    <string name="setting_wifi">Wifi设置</string>
    <string name="done">完成</string>
    <string name="wifi_safe">安全性:</string>
    <string name="wifi_signal_strong">信号强度:</string>
    <string name="wifi_manager">管理WiFi网络</string>
    <string name="showpwd">显示密码</string>
    <string name="user_set_failed">用户设置失败</string>
    <string name="user_set_success">用户设置成功,摄像机正在重启</string>
    <string name="user_getparams">正在获取用户信息...</string>
    <string name="setting_user">用户设置</string>
    <string name="user_setting">用户设置</string>
    <string name="user_admin">管理员</string>
    <string name="date_setting_success">设备时钟时间设置成功</string>
    <string name="date_setting_failed">设备时钟时间设置失败</string>
    <string name="date_middle_island">(GMT-11:00)中途岛,萨摩亚群岛</string>
    <string name="date_hawaii">(GMT -10:00) 夏威夷</string>
    <string name="date_alaska">(GMT-09:00)阿拉斯加</string>
    <string name="date_pacific_time">(GMT-08:00)太平洋时间(美国和加拿大)</string>
    <string name="date_mountain_time">(GMT-07:00)山地时间(美国和加拿大)</string>
    <string name="date_middle_part_time">(GMT-06:00)中部时间(美国和加拿大),墨西哥城</string>
    <string name="date_eastern_time">(GMT-05:00)东部时间(美国和加拿大),利马,波哥大</string>
    <string name="date_ocean_time">(GMT-04:00)大西洋时间(加拿大),圣地亚哥,拉巴斯</string>
    <string name="date_newfoundland">(GMT-03:30)纽芬兰</string>
    <string name="date_brasilia">(GMT-03:00)巴西利亚,布宜若斯艾丽斯,乔治敦</string>
    <string name="date_center_ocean">(GMT-02:00)中大西洋</string>
    <string name="date_cape_verde_island">(GMT-01:00)佛得角群岛</string>
    <string name="date_greenwich">(GMT)格林威治平时,伦敦,里斯本,卡萨布兰卡</string>
	<string name="date_brussels">(GMT+01:00)布鲁赛尔,巴黎,柏林,罗马,马德里,斯多哥尔摩, 贝尔格莱德, 布拉格</string>
    <string name="date_athens">(GMT +02:00) 雅典, 耶路撒冷, 开罗, 赫尔辛基</string>
    <string name="date_nairobi">(GMT +03:00) 内罗毕, 利雅得, 莫斯科</string>
    <string name="date_teheran">(GMT +03:30) 德黑兰</string>
    <string name="date_baku">(GMT +04:00) 巴库, 第比利斯, 阿布扎比, 马斯科特</string>
    <string name="date_kebuer">(GMT +04:30) 科布尔</string>
    <string name="date_islamabad">(GMT +05:00) 伊斯兰堡, 卡拉奇, 塔森干</string>
    <string name="date_calcutta">(GMT +05:30) 加尔各答, 孟买, 马德拉斯, 新德里</string>
    <string name="date_alamotu">(GMT +06:00) 阿拉木图, 新西伯利亚, 阿斯塔南, 达尔</string>
    <string name="date_bangkok">(GMT +07:00) 曼谷, 河内, 雅加达</string>
    <string name="date_beijing">(GMT +08:00) 北京, 新加坡, 台北</string>
    <string name="date_seoul">(GMT +09:00) 首尔, 雅库茨克, 东京</string>
    <string name="date_darwin">(GMT +09:30) 达尔文</string>
    <string name="date_guam">(GMT +10:00) 关岛, 墨尔本, 悉尼, 莫尔兹比港, 符拉迪沃斯托克</string>
    <string name="date_suolumen">(GMT +11:00)马加丹,所罗门群岛, 新喀里多尼亚</string>
    <string name="date_auckland">(GMT +12:00) 奥克兰, 惠灵顿, 斐济</string>
    <string name="date_get_params">正在获取时钟信息...</string>
    <string name="date_ntp_server_time_kriss_re_kr">time.kriss.re.kr</string>
    <string name="date_ntp_server_time_windows_com">time.windows.com</string>
    <string name="date_ntp_server_time_nist_gov">time.nist.gov</string>
	<string name="date_ntp_server_time_nuri_net">time.nuri.net</string>
    <string name="setting_time">设备时钟设置</string>
    <string name="date_device_time">设备时钟时间</string>
    <string name="date_device_timezone">设备时区设定</string>
    <string name="date_ntp_server_auto_check">使用 NTP服务器自动校时</string>
    <string name="date_ntp_server">NTP服务器</string>
    <string name="date_phone_time_auto_check">使用手机时间校准设备时钟</string>
    <string name="sdcard_formatsd">格式化SD卡需要30秒钟,是否格式化?</string>
    <string name="sdcard_getparams">正在获取SDCard信息...</string>
    <string name="sdcard_status_info">没有插卡或者需要格式化</string>
    <string name="sdcard_isformatting">SD卡正在格式化中...</string>
    <string name="sdcard_file_error">文件系统错误</string>
    <string name="sdcard_video">录像中...</string>
    <string name="sdcard_inserted">SD卡已经插入</string>
    <string name="sdcard_set_failed">SD卡设置失败</string>
    <string name="sdcard_set_success">SD卡设置成功</string>
    <string name="sdcard_schedule">SD卡设置</string>
    <string name="sdcard_total">SD卡总容量(M):</string>
    <string name="sdcard_remain">SD卡剩余量(M):</string>
    <string name="sdcard_state">SD卡状态:</string>
    <string name="sdcard_format">格式化</string>
    <string name="sdcard_coverage">录像覆盖:</string>
    <string name="sdcard_recordlength">录像时长(分钟):</string>
    <string name="sdcard_range">范围5-180</string>
    <string name="sdcard_recordtime">定时录像:</string>
    <string name="alerm_detector_layout">移动侦测布防</string>
    <string name="alerm_detector_sensitivity">移动侦测灵敏度</string>
    <string name="alerm_sensitivity_desc">(数值越小越灵敏)</string>
    <string name="alerm_io_layout">报警输入布防</string>
    <string name="alerm_trigger_level">触发电平</string>
    <string name="alerm_presetsit">报警时预置位联动</string>
    <string name="alerm_audio_level">声音侦测布防</string>
    <string name="alerm_audio_sensitivity">灵敏度</string>
    <string name="alerm_upload_picture_num">上传图片张数</string>
    <string name="alerm_io_move">报警后 IO 联动</string>
    <string name="alerm_ioout_level">输出电平</string>
    <string name="alerm_mail_inform">报警后邮件通知</string>
    <string name="alerm_upload_picture">报警后上传图片</string>
    <string name="alerm_upload_picture_time_interval"> 上传图片时间间隔(秒)</string>
    <string name="alerm_trigger_event">报警触发事件</string>
    <string name="alerm_set_failed">报警设置失败</string>
    <string name="setting_aler_sucess">报警设置成功</string>
    <string name="alerm_audio_levelhigh">高灵敏度</string>
    <string name="alerm_audio_levelmiddle">中灵敏度</string>
    <string name="alerm_audio_levellow">低灵敏度</string>
    <string name="alerm_ioin_levelhight">高电平</string>
    <string name="alerm_audio_levelforbid">禁止检测</string>
    <string name="alerm_ioin_levellow">低电平</string>
    <string name="alerm_getparams">正在获取报警信息...</string>
    <string name="alerm_getparams_failed">获取报警信息失败</string>
    <string name="alerm_preset_no">无</string>
    <string name="alerm_uploadinterval_toolong">上传时间不能超过3600秒</string>
    <string name="alerm_uploadpic_prompt">0或空表示不上传图片</string>
    <string name="alerm_log">报警日志</string>
    <string name="alerm_no_log">无报警日志</string>
    <string name="alerm_record">报警后录像</string>
    <string name="alerm_setting">报警设置</string>
    <string name="remote_video_getparams">正在获取远程录像信息...</string>
    <string name="remote_video_offline">摄像机不在线, 无法播放远程录像</string>
    <string name="remote_start_prompt">开始日期不能大于结束日期</string>
    <string name="remote_end_prompt">结束日期不能小于开始日期</string>
    <string name="remote_to">至</string>
    <string name="remote_video_title">远程录像</string>
    <string name="no_video">没有远程录像文件</string>
    <string name="video_sum">个</string>
    <string name="sum_pic">共: </string>
    <string name="picture_sum">张</string>
    <string name="main_edit">编辑</string>
    <string name="local_video_date">录像时间:</string>
    <string name="main_phone">手机</string>
    <string name="setting">设置</string>
    <string name="main_select_all">全选</string>
    <string name="main_select_reverse">反选</string>
    <string name="delete_local_picture">删除该文件</string>
    <string name="localpic_no">沒有照片或视频</string>
    <string name="check_localpic">查看快照</string>
    <string name="takepicture_time">时间:</string>
    <string name="local_video_badfile">文件已损坏</string>
    <string name="dev_pos_x">设备横轴位置</string>
    <string name="dev_pos_y">设备纵轴位置</string>
    <string name="check_pos">查看手环地图</string>
    <string name="login">登录</string>
</resources>