<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinatorlayout_setting_sdcard"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/top"
            style="@style/top_bg_style"
            android:layout_width="fill_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            android:elevation="4dp">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_weight="1.0"
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/tv_camera_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:shadowColor="@color/color_shadow"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:text="@string/sdcard_schedule"
                android:textColor="@color/color_white"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <ImageButton
                android:id="@+id/ok"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_weight="1.0"
                android:src="@drawable/ic_done_white_24dp"
                android:background="@color/colorPrimary"/>
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    app:cardElevation="6dp"
                    card_view:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_margin="5dp"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:text="@string/sdcard_total"
                                android:textColor="@color/color_black"/>

                            <TextView
                                android:id="@+id/tv_sd_total"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:text="0MB"
                                android:textColor="@color/color_black"/>
                        </RelativeLayout>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:src="@color/color_grey"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_margin="5dp"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:text="@string/sdcard_remain"
                                android:textColor="@color/color_black"/>

                            <TextView
                                android:id="@+id/tv_sd_remain"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:text="0MB"
                                android:textColor="@color/color_black"/>
                        </RelativeLayout>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:src="@color/color_grey"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp">

                            <TextView
                                android:id="@+id/sdstate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="5dp"
                                android:text="@string/sdcard_state"
                                android:textColor="@color/color_black"/>

                            <Button
                                android:id="@+id/btn_format"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:text="@string/sdcard_format"/>

                            <TextView
                                android:id="@+id/tv_state"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_toLeftOf="@id/btn_format"
                                android:layout_toRightOf="@+id/sdstate"
                                android:ellipsize="marquee"
                                android:focusable="true"
                                android:focusableInTouchMode="true"
                                android:marqueeRepeatLimit="marquee_forever"
                                android:singleLine="true"
                                android:textColor="@color/color_black"/>
                        </RelativeLayout>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:src="@color/color_grey"
                            android:visibility="gone"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_centerVertical="true"
                                android:text="@string/sdcard_coverage"
                                android:textColor="@color/color_black"/>

                            <CheckBox
                                android:id="@+id/cbx_coverage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"/>
                        </RelativeLayout>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:src="@color/color_grey"
                            android:visibility="gone"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:text="@string/sdcard_recordlength"
                                android:textColor="@color/color_black"/>

                            <!--
                             <EditText
                                 android:id="@+id/edit_record_length"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:inputType="number" >
                                 <requestFocus />
                             </EditText>
                            -->

                            <EditText
                                android:id="@+id/edit_record_length"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:digits="0123456789"
                                android:hint="@string/sdcard_range"
                                android:inputType="number"
                                android:maxLength="3"></EditText>
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:src="@color/color_grey"/>

                        <RelativeLayout
                            android:id="@+id/linearLayout1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp">

                            <TextView
                                android:id="@+id/textView1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:text="@string/sdcard_recordtime"
                                android:textColor="@color/color_black"/>

                            <CheckBox
                                android:id="@+id/cbx_record_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"/>
                        </RelativeLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>