<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top"
        style="@style/top_bg_style"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#3F51B5"
        android:elevation="4dp"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/btn_cancel"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_weight="1.0"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:background="@color/colorPrimary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10.0dip"
            android:text="@string/login"
            android:textColor="@color/color_white"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/add"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_weight="1.0"
            android:src="@drawable/ic_done_white_24dp"
            android:background="@color/colorPrimary"
            />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D8DEF3"
        android:layout_below="@+id/top"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_show_android"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/android_look"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardElevation="6dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tv_camera_uid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center"
                        android:textSize="17sp"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInput_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"/>
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textInput_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:hint="@string/password"
                                android:inputType="textPassword"/>

                        </android.support.design.widget.TextInputLayout>

                        <com.github.glomadrian.materialanimatedswitch.MaterialAnimatedSwitch
                            android:id="@+id/switch_lock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            app:ball_press_color="#FF5722"
                            app:ball_release_color="#259B24"
                            app:base_press_color="#FF5722"
                            app:base_release_color="#259B24"
                            app:icon_press="@drawable/ic_lock_open_white_24dp"
                            app:icon_release="@drawable/ic_lock_outline_white_24dp"
                            />

                    </LinearLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInput_devname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/dev_name"/>
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_camera_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="#FF0000"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:visibility="gone"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>